*: added slack metrics and a happy end.

--- a/meetups/20160525/index.html
+++ b/meetups/20160525/index.html
@@ -69,6 +69,7 @@
         </section>
 
         <section>
+          <section>
             <h2>SLACK</h2>
 
             <p>
@@ -90,6 +91,15 @@
               <a href="http://slack.tgndevs.com">http://slack.tgndevs.com</a>
             </p>
 
+          </section>
+          <section>
+            <h2>SLACK Stats 1/2</h2>
+            <img width="70%" src="img/slack-stats.png" />
+          </section>
+          <section>
+            <h2>SLACK Stats 2/2</h2>
+            <img width="70%" src="img/slack-apps.png" />
+          </section>
         </section>
 
         <section>
@@ -135,6 +145,10 @@
             <li><strong>Professionalizing the Front-end</strong>, by Jordi Anguela</li>
             <li><strong>Backend with Ruby on Rails</strong>, by Guillermo Guerrero</li>
           </ul>
+        </section>
+        <section>
+            <!-- something happy, to start smiles at least -->
+            <img src="img/letsgo.jpg" width="90%" />
         </section>
     </div>
 </div>
