Fixed literals and added meet up url in stats.

--- a/meetups/20160525/index.html
+++ b/meetups/20160525/index.html
@@ -54,6 +54,8 @@
         <section>
             <h2>STATS</h2>
 
+            <a href="http://www.meetup.com/es/Tarragona-Developers-Meetup">http://www.meetup.com/es/Tarragona-Developers-Meetup</a>
+
             <img src="img/stats.png" />
         </section>
 
@@ -80,7 +82,7 @@
                 <li>Public and private channels</li>
                 <li>Direct messages</li>
                 <li>Code snippets</li>
-                <li>Drag&drop files</li>
+                <li>Drag and drop files</li>
                 <li>Integrations</li>
               </ul>
             </p>
@@ -107,7 +109,7 @@
 
             <ul>
               <li><img src="img/logo.png" style="border: 1px solid; margin: 0;"/> tgndevs GitHub organization</li>
-              <li>Send me your GH usernames through Slack</li>
+              <li>Send us your GH usernames through Slack</li>
             </ul>
 
             <img src="img/github.png" width="90%" />
