--- a/meetups/20160525/index.html
+++ b/meetups/20160525/index.html
@@ -52,19 +52,46 @@
         </section>
 
         <section>
-            <h2>STATS</h2>
+          <section>
+              <h2>Meetup group stats</h2>
 
-            <a href="http://www.meetup.com/es/Tarragona-Developers-Meetup">http://www.meetup.com/es/Tarragona-Developers-Meetup</a>
+              <a href="http://www.meetup.com/es/Tarragona-Developers-Meetup">http://www.meetup.com/es/Tarragona-Developers-Meetup</a>
 
-            <img src="img/stats.png" />
+              <img src="img/stats.png" />
+          </section>
+
+          <section>
+              <h2>Meetup forum</h2>
+
+              <ul>
+                <li>Job offers</li>
+                <li>News</li>
+                <li>Events</li>
+                <li>Meetups</li>
+              </ul>
+
+              <p>
+                <a href="http://www.meetup.com/es/Tarragona-Developers-Meetup/messages/boards">http://www.meetup.com/es/Tarragona-Developers-Meetup/messages/boards</a>
+              </p>
+          </section>
+
+          <section>
+            <h2>Call for presentations</h2>
+
+            <ul>
+              <li>Proposals: <a href="https://github.com/tgndevs/meetup/blob/master/meetups.md">https://github.com/tgndevs/meetup/blob/master/meetups.md</a></li>
+              <li>Something curious</li>
+              <li>Related with software</li>
+            </ul>
+          </section>
         </section>
 
         <section>
-            <h2>SPONSORS</h2>
+            <h2>Sponsors</h2>
 
             <ul>
               <li>Place to meet: <span style="color: green;">Done</span></li>
-              <li>Beers: <span style="color: orange;">Blocked</span></li>
+              <li>Beers: <span style="color: orange;">Blocked</span> (Rosita, Damm, Coviran)</li>
               <li>Pizza: <span style="color: red;">N/A</span></li>
               <li>Logo: <span style="color: green;">Done</span></li>
             </ul>
@@ -72,7 +99,7 @@
 
         <section>
           <section>
-            <h2>SLACK</h2>
+            <h2>Slack</h2>
 
             <p>
               <img width="30%" src="img/slack.png" style="float: right;" />
@@ -95,53 +122,32 @@
 
           </section>
           <section>
-            <h2>SLACK Stats 1/2</h2>
+            <h2>Slack use</h2>
             <img width="70%" src="img/slack-stats.png" />
           </section>
           <section>
-            <h2>SLACK Stats 2/2</h2>
+            <h2>Slack apps</h2>
             <img width="70%" src="img/slack-apps.png" />
           </section>
         </section>
 
         <section>
-            <h2>GITHUB</h2>
+            <h2>Github</h2>
+
+            <p>
+              <a href="https://github.com/tgndevs">https://github.com/tgndevs</a>
+            </p>
 
             <ul>
-              <li><img src="img/logo.png" style="border: 1px solid; margin: 0;"/> tgndevs GitHub organization</li>
+              <li><img src="img/logo.png" width="10%" style="border: 1px solid; margin: 0;"/> tgndevs GitHub organization</li>
               <li>Send us your GH usernames through Slack</li>
             </ul>
 
-            <img src="img/github.png" width="90%" />
+            <img src="img/github.png" width="70%" />
         </section>
 
         <section>
-            <h2>MEETUP FORUM</h2>
-
-            <ul>
-              <li>Job offers</li>
-              <li>News</li>
-              <li>Events</li>
-              <li>Meetups</li>
-            </ul>
-
-            <p>
-              <a href="http://www.meetup.com/es/Tarragona-Developers-Meetup/messages/boards">http://www.meetup.com/es/Tarragona-Developers-Meetup/messages/boards</a>
-            </p>
-        </section>
-
-        <section>
-          <h2>CALL FOR PRESENTATIONS</h2>
-
-          <ul>
-            <li>Proposals: <a href="https://github.com/tgndevs/meetup/blob/master/meetups.md">https://github.com/tgndevs/meetup/blob/master/meetups.md</a></li>
-            <li>Something curious</li>
-            <li>Related with software</li>
-          </ul>
-        </section>
-
-        <section>
-          <h2>TODAY’s AGENDA</h2>
+          <h2>Today's agenda</h2>
 
           <ul>
             <li><strong>Professionalizing the Front-end</strong>, by Jordi Anguela</li>
