Removes images border and updates todays meetup slides

--- a/meetups/20160928/index.html
+++ b/meetups/20160928/index.html
@@ -21,6 +21,9 @@
     <!-- Code syntax highlighting -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/custom.css">
+
     <!-- Printing and PDF exports -->
     <script>
         var link = document.createElement('link');
@@ -55,7 +58,7 @@
           <section>
               <h2>Meetup group stats</h2>
 
-              <a href="http://www.meetup.com/es/Tarragona-Developers-Meetup">http://www.meetup.com/es/Tarragona-Developers-Meetup</a>
+              <a href="http://www.meetup.com/Tarragona-Developers-Meetup">http://www.meetup.com/Tarragona-Developers-Meetup</a>
 
               <img src="img/stats.png" />
           </section>
@@ -71,7 +74,7 @@
               </ul>
 
               <p>
-                <a href="http://www.meetup.com/es/Tarragona-Developers-Meetup/messages/boards">http://www.meetup.com/es/Tarragona-Developers-Meetup/messages/boards</a>
+                <a href="http://www.meetup.com/Tarragona-Developers-Meetup/messages/boards">http://www.meetup.com/Tarragona-Developers-Meetup/messages/boards</a>
               </p>
           </section>
 
@@ -81,11 +84,11 @@
             <ul>
               <li>Proposals: <a href="https://github.com/tgndevs/meetup/blob/master/meetups.md">https://github.com/tgndevs/meetup/blob/master/meetups.md</a></li>
               <li>Something curious</li>
-              <li>Related with software</li>
+              <li>Related to software</li>
             </ul>
           </section>
         </section>
-
+<!--
         <section>
             <h2>Sponsors</h2>
 
@@ -95,7 +98,7 @@
               <li>Pizza: <span style="color: red;">N/A</span></li>
               <li>Logo: <span style="color: green;">Done</span></li>
             </ul>
-        </section>
+        </section> -->
 
         <section>
           <section>
@@ -135,7 +138,7 @@
             </p>
 
             <ul>
-              <li><img src="img/logo.png" width="10%" style="border: 1px solid; margin: 0;"/> tgndevs GitHub organization</li>
+              <li><strong>tgndevs</strong> GitHub organization</li>
               <li>Send us your GH usernames through Slack</li>
             </ul>
 
@@ -144,7 +147,7 @@
 
         <section>
           <h2>Today's agenda: REST APIs</h2>
-
+          <br>
           <ul>
             <li><strong>REST architecture, RESTful APIs and an example with Symfony</strong>, by Victor Salvans</li>
             <li><strong>API documentation and tools with Swagger</strong>, by Guillermo Guerrero</li>
