Add eltaller logo and slide

--- a/meetups/20161124/index.html
+++ b/meetups/20161124/index.html
@@ -56,6 +56,12 @@
         </section>
 
         <section>
+          <h2>El Taller</h2>
+          <img style="width: 40%;" src="img/club_cw_logo.jpg" />
+          <p><a href="https://eltaller.club/">http://eltaller.club</a></p>
+        </section>
+
+        <section>
           <section>
               <h2>Meetup group stats</h2>
 
