--- a/meetups/index.html
+++ b/meetups/index.html
@@ -14,8 +14,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-        <link rel="stylesheet" href="css/reveal.css">
-        <link rel="stylesheet" href="css/theme/serif.css" id="theme">
+        <link rel="stylesheet" href="index/css/reveal.css">
+        <link rel="stylesheet" href="index/css/theme/serif.css" id="theme">
 
         <!-- Code syntax highlighting -->
         <link rel="stylesheet" href="index/lib/css/zenburn.css">
