--- a/meetups/20170607/index.html
+++ b/meetups/20170607/index.html
@@ -149,8 +149,8 @@
         </section>
         <section>
             <!-- something happy, to start smiles at least -->
-            <h2>Let's start!</h2>
-            <img src="img/letsgo.jpg" width="40%" />
+            <h2><pre>May the #rigor be with you</pre></h2>
+            <img src="img/letsgo.gif" width="40%" />
         </section>
     </div>
 </div>
