--- a/meetups/20171102/index.html
+++ b/meetups/20171102/index.html
@@ -142,7 +142,7 @@
           <br>
           <ul>
             <li><strong>Introducción a Bitcoin y blockchain,</strong> por Adrián Moreno</li>
-            <li><strong>Introduccion a React Native,</strong> por Alejandro Garcia and Guillermo Guerrero</li>
+            <li><strong>Introducción a React Native,</strong> por Alejandro Garcia and Guillermo Guerrero</li>
           </ul>
         </section>
         <section>
