--- a/meetups/20171102/index.html
+++ b/meetups/20171102/index.html
@@ -56,11 +56,11 @@
         </section>
 
         <section>
-          <section>
+          <!-- <section>
               <h2>Meetup group stats</h2>
 
               <img style="width: 80%;" src="img/stats.png" />
-          </section>
+          </section> -->
 
           <section>
               <h2>Meetup forum</h2>
@@ -111,7 +111,7 @@
             </p>
 
           </section>
-          <section>
+          <!-- <section>
             <h2>Slack use</h2>
             <img width="70%" src="img/slack-stats.png" />
             <br />
@@ -119,7 +119,7 @@
             <p style="font-size: 58px;">
               <a href="http://slack.tgndevs.com">http://slack.tgndevs.com</a>
             </p>
-          </section>
+          </section> -->
         </section>
 
         <section>
