--- a/meetups/20180426/index.html
+++ b/meetups/20180426/index.html
@@ -6,8 +6,8 @@
 
     <title>Tarragona Developers Meetup</title>
 
-    <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-    <meta name="author" content="Hakim El Hattab">
+    <meta name="description" content="A group of developers from Tarragona area">
+    <meta name="author" content="Tarragona Developers Meetup group">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -47,7 +47,7 @@
         <section>
             <h2>Tarragona Developers</h2>
 
-            <img width="50%" src="img/intro.png"/>
+            <img width="35%" src="img/tgndevs.png"/>
 
             <p><a href="http://www.meetup.com/Tarragona-Developers-Meetup">meetup.com/Tarragona-Developers-Meetup</a></p>
             <p>
@@ -58,9 +58,10 @@
         <section>
 
           <section>
-            <h2>Call for Talks!</h2>
+            <h2>YOU are important!</h2>
 
             <ul>
+              <li>Make community</li>
               <li>Sharing experiences</li>
               <li>Best practices</li>
               <li>Live demos</li>
