--- a/meetups/20180531/index.html
+++ b/meetups/20180531/index.html
@@ -116,6 +116,17 @@
         </section>
 
         <section>
+          <h2>Acknowledgements</h2>
+          <br>
+          <ul>
+              <li><a href="https://www.etse.urv.cat" target="_blank">ETSE</a> for the conference room</li>
+              <li><a href="https://www.urv.cat" target="_blank">Universitat
+                      Rovira i Virgili</a> for the WIFI</li>
+              <li>All YOU for comming!</li>
+          </ul>
+        </section>
+
+        <section>
           <h2>Today's agenda</h2>
           <br>
           <ul>
