--- a/meetups/20180621/index.html
+++ b/meetups/20180621/index.html
@@ -116,6 +116,15 @@
         </section>
 
         <section>
+          <h2>Acknowledgements</h2>
+          <br>
+          <ul>
+              <li><a href="https://www.etse.urv.cat" target="_blank">ETSE</a> for the conference room!</li>
+              <li>All YOU for comming!</li>
+          </ul>
+        </section>
+
+        <section>
           <h2>Today's agenda</h2>
           <br>
           <ul>
