update Meetup June 2018 with GitKraken and Logo contest

--- a/meetups/20180621/index.html
+++ b/meetups/20180621/index.html
@@ -72,6 +72,21 @@
         </section>
 
         <section>
+            <h2> <a
+                href="https://www.meetup.com/Tarragona-Developers-Meetup/pages/26748674/Concurso_Logo_2018_del_Meetup/"
+                target="_blank">Logo Contest</a></h2>
+
+            <ul>
+                <li>+2 years of Meetup, we've earned a new Logo, aren't we?</li>
+                <li>Catch this Meetup's essence</li>
+                <li>Build a 180x180px logo</li>
+                <li>Share it on Twitter: <b>#tgndevslogo2018</b> and
+                    <b>@tgndevs</b></li>
+                <li>Each like and RT counts!</li>
+            </ul>
+        </section>
+
+        <section>
           <section>
             <h2>Slack</h2>
 
@@ -120,6 +135,7 @@
           <br>
           <ul>
               <li><a href="https://www.etse.urv.cat" target="_blank">ETSE</a> for the conference room!</li>
+              <li><a href="https://www.gitkraken.com/" target="_blank">GitKraken</a> for the gifts!</li>
               <li>All YOU for comming!</li>
           </ul>
         </section>
