Minor changes to June slide deck

--- a/meetups/20180621/index.html
+++ b/meetups/20180621/index.html
@@ -47,7 +47,7 @@
         <section>
             <h2>Tarragona Developers</h2>
 
-            <img width="35%" src="img/tgndevs.png"/>
+            <img width="45%" src="img/intro.png"/>
 
             <p><a href="http://www.meetup.com/Tarragona-Developers-Meetup">meetup.com/Tarragona-Developers-Meetup</a></p>
             <p>
@@ -65,7 +65,7 @@
               <li>Sharing experiences</li>
               <li>Best practices</li>
               <li>Live demos and hands-on</li>
-              <li>Cool projects</li>
+              <li>Side projects</li>
               <li>More ideas: <a href="https://github.com/tgndevs/meetup/blob/master/meetups.md">github.com/tgndevs/meetup</a></li>
             </ul>
           </section>
@@ -136,7 +136,7 @@
           <ul>
               <li><a href="https://www.etse.urv.cat" target="_blank">ETSE</a> for the conference room!</li>
               <li><a href="https://www.gitkraken.com/" target="_blank">GitKraken</a> for the gifts!</li>
-              <li>All YOU for comming!</li>
+              <li>YOU for coming!</li>
           </ul>
         </section>
 
@@ -144,8 +144,8 @@
           <h2>Today's agenda</h2>
           <br>
           <ul>
-              <li>Event Storming, by <b>Jordi Pujol</b>.</li>
-              <li>Istio, the service mesh, by <b>Fernando Ripoll</b>.</li>
+              <li>Event Storming, by <b>Jordi Pujol</b></li>
+              <li>Istio, the service mesh, by <b>Fernando Ripoll</b></li>
           </ul>
         </section>
         <section>
