Update meetup agenda
Signed-off-by: Adrian Moreno <adrian@morenomartinez.com>

--- a/meetups/20181030/index.html
+++ b/meetups/20181030/index.html
@@ -128,8 +128,8 @@
           <h2>Today's agenda</h2>
           <br>
           <ul>
+              <li>Log-based architectures, by <b>Adrián Moreno</b>.</li>
               <li>3D Printing, by <b>Guillermo Guerrero & Santiago Frías</b>.</li>
-              <li>Kappa, by <b>Adrián Moreno</b>.</li>
           </ul>
         </section>
         <section>
