--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <ul>
 
+<li><a href="http://tgndevs.github.io/slides/meetups/20181117/">November 17, 2018</a></li>
 <li><a href="http://tgndevs.github.io/slides/meetups/20181030/">October 30, 2018</a></li>
 <li><a href="http://tgndevs.github.io/slides/meetups/20180913/">September 13, 2018</a></li>
 <li><a href="http://tgndevs.github.io/slides/meetups/20180621/">June 21, 2018</a></li>
