Add meetup historical information
Signed-off-by: Adrián Moreno <adrian@morenomartinez.com>

--- a/meetups/20190221/index.html
+++ b/meetups/20190221/index.html
@@ -101,14 +101,31 @@
 
         </section>
 
+        <section>
+          <section>
+            <h1>A look back...</h1>
+          </section>
 
+          <section>
+            <h2>Since Feb 17, 2016:</h2>
+            <br>
+            <ul>
+              <li>35 meetups (9 Software & Beers)</li>
+              <li>~1 meetup/month</li>
+              <li>650+ members</li>
+              <li>~25 attendees/meetup</li>
+              <li>22 different speakers</li>
+              <li>32.000+ Slack messages</li>
+            </ul>
+          </section>
+        </section>
 
         <section>
-          <h2>Acknowledgements</h2>
+          <h2>Thank you!</h2>
           <br>
           <ul>
-              <li><a href="https://www.etse.urv.cat" target="_blank">ETSE</a> for the conference room!</li>
-              <li>All of YOU for coming!</li>
+              <li><a href="https://www.etse.urv.cat" target="_blank">ETSE</a> and <a href="https://www.urv.cat" target="_blank">URV</a> for the conference room</li>
+              <li>All of YOU for making it happen!</li>
           </ul>
         </section>
 
@@ -116,7 +133,7 @@
           <h2>Today's agenda</h2>
           <br>
           <ul>
-              <li><i>Serverless FaaS</i>, by <b>Pedro García</b>.</li>
+              <li><i>Presente y futuro de Serverless-FaaS</i>, by <b>Pedro García</b>.</li>
           </ul>
         </section>
 
