--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
 <ul>
 
+<li><a href="http://tgndevs.github.io/slides/meetups/20190321/">March 21, 2019</a></li>
+<li><a href="http://tgndevs.github.io/slides/meetups/20190221/">February 21, 2019</a></li>
+<li><a href="http://tgndevs.github.io/slides/meetups/20190123/">January 23, 2019</a></li>
+<li><a href="http://tgndevs.github.io/slides/meetups/20181220/">December 20, 2018</a></li>
+<li><a href="http://tgndevs.github.io/slides/meetups/20181122/">November 22, 2018</a></li>
 <li><a href="http://tgndevs.github.io/slides/meetups/20181117/">November 17, 2018</a></li>
 <li><a href="http://tgndevs.github.io/slides/meetups/20181030/">October 30, 2018</a></li>
 <li><a href="http://tgndevs.github.io/slides/meetups/20180913/">September 13, 2018</a></li>
