Fix wrong URLs for meta tags

--- a/meetups/20190321/index.html
+++ b/meetups/20190321/index.html
@@ -9,12 +9,12 @@
     <meta name="author" content="Tarragona Developers Meetup">
     <meta name="description" content="Meetup on 2019-03-21 with TGNDevs: A group of developers from Tarragona area">
 
-    <meta property="og:title" content="Cosas que pasan" />
-    <meta property="og:locale" content="es_ES" />
-    <meta property="og:description" content="Hablo de cosas que me pasan, pero siempre con un toque particular. Soy humano y de profesión ingeniero en informática." />
-    <meta property="og:url" content="https://jpahullo.github.io/slides/meetups/20190321/" />
+    <meta property="og:title" content="TGNDevs Meetup: 2019-03-21" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:description" content="Meetup on 2019-03-21 with TGNDevs: A group of developers from Tarragona area" />
+    <meta property="og:url" content="https://tgndevs.github.io/slides/meetups/20190321/" />
     <meta property="og:site_name" content="TGNDevs Meetup: 2019-03-21" />
-    <meta property="og:image" content="https://jpahullo.github.io/slides/meetups/20190321/img/tgndevs.png" />
+    <meta property="og:image" content="https://tgndevs.github.io/slides/meetups/20190321/img/tgndevs.png" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tgndevs" />
