--- a/meetups/20190424/index.html
+++ b/meetups/20190424/index.html
@@ -128,7 +128,8 @@
           <h2>Today's agenda</h2>
           <br>
           <ul>
-              <li><i>Data streaming con Pravega & Kubernetes operators</i>, by <b>Raúl Gracia and Adrián Moreno</b>.</li>
+              <li><i>Pravega: A Storage System for Unbounded Data Streams</i>, by <b>Raúl Gracia</b>.</li>
+              <li><i>Extending Kubernetes with Operators</i>, by <b>Adrián Moreno</b>.</li>
           </ul>
         </section>
 
