--- a/meetups/20190424/index.html
+++ b/meetups/20190424/index.html
@@ -30,7 +30,7 @@
     <link rel="canonical" href="https://tgndevs.github.io/slides/meetups/20190424/" />
 
     <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/theme/moon.css" id="theme">
+    <link rel="stylesheet" href="css/theme/white.css" id="theme">
 
     <!-- Code syntax highlighting -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
