--- a/meetups/20200416/index.html
+++ b/meetups/20200416/index.html
@@ -7,13 +7,13 @@
     <title>TgnDevs Meetup - 2020-04-16</title>
 
     <meta name="author" content="Tarragona Developers Meetup (TgnDevs)">
-    <meta name="description" content="A group of developers from Tarragona area">
+    <meta name="description" content="A Developer Community in Tarragona">
 
     <meta property="og:title" content="TgnDevs Meetup" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:description" content="A group of developers from Tarragona area" />
+    <meta property="og:description" content="A Developer Community in Tarragona" />
     <meta property="og:url" content="https://tgndevs.github.io/slides/meetups/20200416/" />
-    <meta property="og:site_name" content="TGNDevs Meetup: 2020-02-06" />
+    <meta property="og:site_name" content="TgnDevs Meetup: 2020-04-16" />
     <meta property="og:image" content="https://tgndevs.github.io/slides/meetups/20200416/img/tgndevs.png" />
 
     <meta name="twitter:card" content="summary" />
@@ -69,9 +69,8 @@
 
         <section>
             <h2>Tarragona Developers</h2>
-
             <ul>
-              <li>Nonprofit developers community in Tarragona</li>
+              <li>Nonprofit Developers Community in Tarragona</li>
               <li>Since February 2016</li>
               <li>1 meetup per month</li>
               <li>Sala de Graus @ ETSE-URV</li>
@@ -80,14 +79,13 @@
         </section>
 
         <section>
-            <h2>You are important!</h2>
-
+            <h2>Open to everyone</h2>
             <ul>
-              <li>Make community</li>
-              <li>Sharing experiences</li>
+              <li>Share experiences and learnings</li>
               <li>Best practices</li>
-              <li>Live demos and hands-on</li>
-              <li>Cool projects</li>
+              <li>Live demos</li>
+              <li>Hands-on workshops</li>
+              <li>Side projects</li>
               <li>etc...</li>
             </ul>
         </section>
@@ -124,7 +122,7 @@
             <section>
                 <h2>GitHub</h2>
                 <p><a href="https://github.com/tgndevs">github.com/tgndevs</a></p>
-                <img src="img/github_201804.png" width="70%" />
+                <img src="img/github_201804.png" width="90%" />
             </section>
 
         </section>
