--- a/meetups/20201008/index.html
+++ b/meetups/20201008/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>TgnDevs Meetup - 2020-07-02</title>
+    <title>TgnDevs Meetup - 2020-10-08</title>
 
     <meta name="author" content="Tarragona Developers Meetup (TgnDevs)">
     <meta name="description" content="A Developer Community in Tarragona">
@@ -12,9 +12,9 @@
     <meta property="og:title" content="TgnDevs Meetup" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:description" content="A Developer Community in Tarragona" />
-    <meta property="og:url" content="https://tgndevs.github.io/slides/meetups/20200702/" />
-    <meta property="og:site_name" content="TgnDevs Meetup: 2020-05-21" />
-    <meta property="og:image" content="https://tgndevs.github.io/slides/meetups/20200702/img/tgndevs.png" />
+    <meta property="og:url" content="https://tgndevs.github.io/slides/meetups/20201008/" />
+    <meta property="og:site_name" content="TgnDevs Meetup: 2020-10-08" />
+    <meta property="og:image" content="https://tgndevs.github.io/slides/meetups/20201008/img/tgndevs.png" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tgndevs" />
@@ -27,7 +27,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-    <link rel="canonical" href="https://tgndevs.github.io/slides/meetups/20200702/" />
+    <link rel="canonical" href="https://tgndevs.github.io/slides/meetups/20201008/" />
 
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/white.css" id="theme">
@@ -59,6 +59,18 @@
         <!-- Any section element inside of this container is displayed as a slide -->
         <div class="slides">
 
+            {% comment %} <section>
+                <img width="30%" src="img/tgndevs.png" />
+
+                <h4><b>Aprende a monitorizar tus aplicaciones e infraestructura</b></h4>
+                <p><i>por <b>Idir Ouhab</b></i></p>
+                <br>
+                <p style="text-align: right;">
+                    Jueves, 8 de Octubre de 2020<br>
+                    19:00h
+                </p>
+            </section> {% endcomment %}
+
             <section>
                 <img width="35%" src="img/tgndevs.png" />
 
@@ -66,7 +78,7 @@
                         href="https://www.meetup.com/Tarragona-Developers-Meetup">meetup.com/Tarragona-Developers-Meetup</a>
                 </p>
                 <p>
-                    July 2nd, 2020
+                    October 8th, 2020
                 </p>
             </section>
 
@@ -167,7 +179,6 @@
                             target="_blank">URV</a> for the conference room</li>
                     <li><a href="https://streamyard.com/" target="_blank">StreamYard</a> and <a
                             href="https://www.youtube.com/" target="_blank">YouTube</a> for the streaming platforms</li>
-                    <li>All of YOU to make it happen!</li>
                 </ul>
             </section>
 
@@ -175,7 +186,7 @@
                 <h2>Today's agenda</h2>
                 <br>
                 <ul>
-                    <li><i>Visión artificial para dummies con Google Vision</i></br> por <b>Oriol Mauri</b></li>
+                    <li><i>Aprende a monitorizar tus aplicaciones e infraestructura</i></br> por <b>Idir Ouhab</b></li>
                 </ul>
             </section>
 
