--- a/meetups/20201008/index.html
+++ b/meetups/20201008/index.html
@@ -59,7 +59,7 @@
         <!-- Any section element inside of this container is displayed as a slide -->
         <div class="slides">
 
-            {% comment %} <section>
+            <!-- <section>
                 <img width="30%" src="img/tgndevs.png" />
 
                 <h4><b>Aprende a monitorizar tus aplicaciones e infraestructura</b></h4>
@@ -69,7 +69,7 @@
                     Jueves, 8 de Octubre de 2020<br>
                     19:00h
                 </p>
-            </section> {% endcomment %}
+            </section> -->
 
             <section>
                 <img width="35%" src="img/tgndevs.png" />
